Revert "Add min-height to avoid overlap"
This reverts commit f1fe4a7632ab78297e893eca69507ffab7349da3.

--- a/public/style.css
+++ b/public/style.css
@@ -590,10 +590,6 @@ video {
   height: 100%;
 }
 
-.min-h-20 {
-  min-height: 5rem;
-}
-
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
